--- a/.github/workflows/frappe-ci.yml
+++ b/.github/workflows/frappe-ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     strategy:
       matrix:
@@ -56,8 +56,7 @@ jobs:
         sudo apt-get install -y \
           git build-essential python3-setuptools python3-dev \
           libffi-dev python3-pip libssl-dev libtiff5-dev \
-          libmariadb-dev-compat libmariadb-dev \
-          redis-tools libmysqlclient-dev
+          redis-tools
           
     - name: Install bench
       run: |
